@@ -10,7 +10,6 @@ package org.elasticsearch.compute.operator.topn;
 import org.elasticsearch.compute.data.Block;
 import org.elasticsearch.compute.data.BlockFactory;
 import org.elasticsearch.compute.data.BlockUtils;
-import org.elasticsearch.compute.data.DocBlock;
 import org.elasticsearch.compute.data.ElementType;
 import org.elasticsearch.compute.data.LongBlock;
 import org.elasticsearch.compute.data.Page;
@@ -43,12 +42,10 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.LongStream;
-import java.util.stream.Stream;
 
 import static org.elasticsearch.compute.data.ElementType.DOC;
 import static org.elasticsearch.compute.data.ElementType.LONG;
 import static org.elasticsearch.compute.operator.topn.TopNEncoder.DEFAULT_UNSORTABLE;
-import static org.elasticsearch.compute.test.BlockTestUtils.append;
 import static org.elasticsearch.compute.test.BlockTestUtils.readInto;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
@@ -131,10 +128,6 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
         assertThat(topNLong(values, 2, false, true), equalTo(Arrays.asList(null, null, 4L, 4L, 2L, 1L)));
     }
 
-    private List<Long> topNLong(List<Long> inputValues, int limit, boolean ascendingOrder, boolean nullsFirst) {
-        return topNLong(driverContext(), inputValues, limit, ascendingOrder, nullsFirst);
-    }
-
     @Override
     protected SourceOperator simpleInput(BlockFactory blockFactory, int size) {
         return new TupleLongLongBlockSourceOperator(
@@ -199,41 +192,6 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
         );
     }
 
-    private List<List<Object>> runGroupedTopN(
-        List<Page> pages,
-        int topCount,
-        List<ElementType> elementTypes,
-        List<TopNEncoder> encoders,
-        List<SortOrder> sortOrders,
-        int[] groupKeys
-    ) {
-        DriverContext driverContext = driverContext();
-        List<List<Object>> actual = new ArrayList<>();
-        try (
-            Driver driver = TestDriverFactory.create(
-                driverContext,
-                new CannedSourceOperator(pages.iterator()),
-                List.of(
-                    new GroupedTopNOperator(
-                        driverContext.blockFactory(),
-                        nonBreakingBigArrays().breakerService().getBreaker("request"),
-                        topCount,
-                        elementTypes,
-                        encoders,
-                        sortOrders,
-                        groupKeys,
-                        randomPageSize(),
-                        Long.MAX_VALUE
-                    )
-                ),
-                new PageConsumerOperator(p -> readInto(actual, p))
-            )
-        ) {
-            new TestDriverRunner().run(driver);
-        }
-        return actual;
-    }
-
     /**
      * Tests that the SORTED input ordering optimization short-circuiting addInput() doesn't incorrectly skip rows
      * belonging to groups not yet populated when another group's row is rejected.
@@ -252,32 +210,8 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
         List<SortOrder> sortOrders = List.of(new SortOrder(0, true, true));
 
         BlockFactory bf = driverContext().blockFactory();
-
-        // Page 1: sorted ASC by sort key
-        Page page1;
-        try (
-            Block.Builder sortCol = ElementType.INT.newBlockBuilder(2, bf);
-            Block.Builder groupCol = ElementType.INT.newBlockBuilder(2, bf)
-        ) {
-            append(sortCol, 1);
-            append(sortCol, 3);
-            append(groupCol, 0);
-            append(groupCol, 1);
-            page1 = new Page(sortCol.build(), groupCol.build());
-        }
-
-        // Page 2: sorted ASC by sort key
-        Page page2;
-        try (
-            Block.Builder sortCol = ElementType.INT.newBlockBuilder(2, bf);
-            Block.Builder groupCol = ElementType.INT.newBlockBuilder(2, bf)
-        ) {
-            append(sortCol, 2);
-            append(sortCol, 4);
-            append(groupCol, 0);
-            append(groupCol, 2);
-            page2 = new Page(sortCol.build(), groupCol.build());
-        }
+        Page page1 = new Page(BlockUtils.fromList(bf, List.of(List.of(1, 0), List.of(3, 1))));
+        Page page2 = new Page(BlockUtils.fromList(bf, List.of(List.of(2, 0), List.of(4, 2))));
 
         List<List<Object>> actual = runGroupedTopN(List.of(page1, page2), 1, elementTypes, encoders, sortOrders, new int[] { 1 });
 
@@ -348,7 +282,7 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
     }
 
     public void testShardContextManagement_limitEqualToCount_noShardContextIsReleased() {
-        topNShardContextManagementAux(2, Stream.generate(() -> true).limit(4).toList());
+        topNShardContextManagementAux(2, List.of(true, true, true, true));
     }
 
     public void testShardContextManagement_notAllShardsPassTopN_shardsAreReleased() {
@@ -363,7 +297,12 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
             Arrays.asList(new BlockUtils.Doc(3, 40, 400), -3L, 2L)
         );
 
-        List<RefCounted> refCountedList = Stream.<RefCounted>generate(() -> new SimpleRefCounted()).limit(4).toList();
+        List<RefCounted> refCountedList = List.of(
+            new SimpleRefCounted(),
+            new SimpleRefCounted(),
+            new SimpleRefCounted(),
+            new SimpleRefCounted()
+        );
         var shardRefCounters = new IndexedByShardIdFromList<>(refCountedList);
         var pages = topNMultipleColumns(
             driverContext(),
@@ -382,13 +321,18 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
             refCountedList.forEach(RefCounted::decRef);
 
             assertThat(refCountedList.stream().map(RefCounted::hasReferences).toList(), equalTo(expectedOpenAfterTopN));
-            assertThat(pageToValues(pages), equalTo(computeTopN(values, 2, 1, limit, true)));
-
-            for (var rc : refCountedList) {
-                assertFalse(rc.hasReferences());
+            List<List<Object>> valuesAsObjects = values.stream().map(row -> row.stream().map(v -> (Object) v).toList()).toList();
+            List<List<Object>> actual = new ArrayList<>();
+            for (Page p : pages) {
+                actual.addAll(readAsRowsSingleValue(p));
             }
+            assertThat(actual, equalTo(computeTopN(valuesAsObjects, List.of(2), List.of(new SortOrder(1, true, false)), limit)));
         } finally {
             Releasables.close(pages);
+        }
+
+        for (var rc : refCountedList) {
+            assertFalse(rc.hasReferences());
         }
     }
 
@@ -433,7 +377,7 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
                     topCount,
                     randomBlocksResult.elementTypes,
                     randomBlocksResult.encoders,
-                    uniqueOrders.stream().toList(),
+                    uniqueOrders,
                     groupKeys.stream().mapToInt(Integer::intValue).toArray(),
                     rows,
                     Long.MAX_VALUE
@@ -475,6 +419,41 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
         assertThat(actualCounts, equalTo(expectedCounts));
     }
 
+    private List<List<Object>> runGroupedTopN(
+        List<Page> pages,
+        int topCount,
+        List<ElementType> elementTypes,
+        List<TopNEncoder> encoders,
+        List<SortOrder> sortOrders,
+        int[] groupKeys
+    ) {
+        DriverContext driverContext = driverContext();
+        List<List<Object>> actual = new ArrayList<>();
+        try (
+            Driver driver = TestDriverFactory.create(
+                driverContext,
+                new CannedSourceOperator(pages.iterator()),
+                List.of(
+                    new GroupedTopNOperator(
+                        driverContext.blockFactory(),
+                        nonBreakingBigArrays().breakerService().getBreaker("request"),
+                        topCount,
+                        elementTypes,
+                        encoders,
+                        sortOrders,
+                        groupKeys,
+                        randomPageSize(),
+                        Long.MAX_VALUE
+                    )
+                ),
+                new PageConsumerOperator(p -> readInto(actual, p))
+            )
+        ) {
+            new TestDriverRunner().run(driver);
+        }
+        return actual;
+    }
+
     private static Comparator<List<Object>> comparatorFromSortOrders(List<SortOrder> sortOrders) {
         return (row1, row2) -> {
             assertEquals(row1.size(), row2.size());
@@ -487,16 +466,6 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
             return 0;
         };
     }
-
-    private static final Comparator<List<Object>> TIE_BREAKING_COMPARATOR = (row1, row2) -> {
-        for (int i = 0; i < row1.size(); i++) {
-            int cmp = compareValues(new SortOrder(i, true, true)).compare(row1.get(i), row2.get(i));
-            if (cmp != 0) {
-                return cmp;
-            }
-        }
-        return 0;
-    };
 
     private static boolean isSorted(List<List<Object>> values, Comparator<List<Object>> comparator) {
         return IntStream.range(1, values.size()).allMatch(i -> comparator.compare(values.get(i - 1), values.get(i)) <= 0);
@@ -511,25 +480,10 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
     private static final Comparator<Object> CASTING_COMPARATOR = (o1, o2) -> ((Comparable<Object>) o1).compareTo(o2);
 
     private List<Tuple<Long, Long>> computeTopN(List<Tuple<Long, Long>> inputValues, int limit, boolean ascendingOrder) {
-        return computeTopN(inputValues.stream().map(e -> Arrays.asList(e.v1(), e.v2())).toList(), 1, 0, limit, ascendingOrder).stream()
+        List<List<Object>> rows = inputValues.stream().map(e -> Arrays.<Object>asList(e.v1(), e.v2())).toList();
+        return computeTopN(rows, List.of(1), List.of(new SortOrder(0, ascendingOrder, false)), limit).stream()
             .map(l -> Tuple.tuple((Long) l.get(0), (Long) l.get(1)))
             .toList();
-    }
-
-    private List<? extends List<?>> computeTopN(
-        List<? extends List<?>> inputValues,
-        int groupChannel,
-        int sortChannel,
-        int limit,
-        boolean ascendingOrder
-    ) {
-        List<List<Object>> singleValueInput = new ArrayList<>();
-        for (List<?> row : inputValues) {
-            List<Object> rowAsObject = row.stream().map(v -> (Object) v).toList();
-            singleValueInput.add(rowAsObject);
-        }
-        List<SortOrder> sortOrders = List.of(new SortOrder(sortChannel, ascendingOrder, false));
-        return computeTopN(singleValueInput, List.of(groupChannel), sortOrders, limit);
     }
 
     private List<List<Object>> computeTopN(
@@ -538,28 +492,7 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
         List<SortOrder> sortOrders,
         int limit
     ) {
-        Comparator<List<Object>> comparator = (row1, row2) -> {
-            for (SortOrder order : sortOrders) {
-                Object v1 = row1.get(order.channel());
-                Object v2 = row2.get(order.channel());
-                boolean firstIsNull = v1 == null;
-                boolean secondIsNull = v2 == null;
-
-                if (firstIsNull || secondIsNull) {
-                    int nullCompare = Boolean.compare(firstIsNull, secondIsNull) * (order.nullsFirst() ? -1 : 1);
-                    if (nullCompare != 0) {
-                        return nullCompare;
-                    }
-                    continue;
-                }
-
-                int cmp = CASTING_COMPARATOR.compare(v1, v2);
-                if (cmp != 0) {
-                    return order.asc() ? cmp : -cmp;
-                }
-            }
-            return 0;
-        };
+        Comparator<List<Object>> comparator = comparatorFromSortOrders(sortOrders);
 
         Map<List<Object>, List<List<Object>>> grouped = inputValues.stream()
             .collect(Collectors.groupingBy(row -> groupChannels.stream().map(row::get).toList()));
@@ -571,36 +504,6 @@ public class GroupedTopNOperatorTests extends TopNOperatorTests {
         }
         topNExpectedValues.sort(comparator);
         return topNExpectedValues;
-    }
-
-    private static List<List<?>> pageToValues(List<Page> pages) {
-        var result = new ArrayList<List<?>>();
-        for (Page page : pages) {
-            var blocks = IntStream.range(0, page.getBlockCount()).mapToObj(page::<Block>getBlock).toList();
-            result.addAll(
-                IntStream.range(0, page.getPositionCount())
-                    .mapToObj(position -> blocks.stream().map(block -> getBlockValue(block, position)).toList())
-                    .toList()
-            );
-            page.releaseBlocks();
-        }
-
-        return result;
-    }
-
-    private static Object getBlockValue(Block block, int position) {
-        return block.isNull(position) ? null : switch (block) {
-            case LongBlock longBlock -> longBlock.getLong(position);
-            case DocBlock docBlock -> {
-                var vector = docBlock.asVector();
-                yield new BlockUtils.Doc(
-                    vector.shards().getInt(position),
-                    vector.segments().getInt(position),
-                    vector.docs().getInt(position)
-                );
-            }
-            default -> throw new IllegalArgumentException("Unsupported block type: " + block.getClass());
-        };
     }
 
 }
